[gd_scene load_steps=4 format=3 uid="uid://bjqfu5j5wlxk3"]

[ext_resource type="Script" path="res://scenes/Option Menu/AudioSetting.gd" id="1_c6faj"]
[ext_resource type="FontFile" uid="uid://bjbpwr6l3g772" path="res://assets/Fonts/Broken-Console-Bold.ttf" id="2_a42hp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lkxb2"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_right = 2
expand_margin_left = 15.0
expand_margin_right = 15.0

[node name="AudioSetting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c6faj")
bus_name = "Master"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
clip_contents = true
layout_mode = 0
offset_right = 586.0
offset_bottom = 39.0
theme_override_constants/separation = 48
alignment = 1

[node name="AudioName" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_a42hp")
theme_override_font_sizes/font_size = 23
text = "Master Volume"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="MasterSlider" type="HSlider" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.001

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
visible = false
layout_mode = 2

[node name="AudioNum" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_a42hp")
theme_override_font_sizes/font_size = 23
theme_override_styles/normal = SubResource("StyleBoxFlat_lkxb2")
text = "99"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
visible = false
layout_mode = 2
